employee-manifest/base/database/db-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
  # namespace: intern-workspace
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: employee-backend
      ports:
        - protocol: TCP
          port: 3306
